--- a/resources/assets/sass/components/_comments.scss
+++ b/resources/assets/sass/components/_comments.scss
@@ -1,28 +1,29 @@
 .comment {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    padding: 2rem;
+    background-color: $color-grey;
     margin-bottom: 2rem;
 
-    .media-left {
-        padding: 1rem;
-        padding-right: 3rem;
-    }
-
-    .media-heading {
-        padding-bottom: 0.5em;
+    &__header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding-bottom: 1em;
         border-bottom: 2px solid darken($color-grey, 10);
-        margin: 0 0 2rem;
-    }
+        margin-bottom: 2rem;
 
-    .media-body {
-        padding: 2rem;
-        background-color: $color-grey;
+        figure {
+            margin-right: 1em;
+        }
     }
 
     blockquote {
         padding: 0 1em;
         font-size: 1em;
         border-left: 3px solid rgba(black, 0.25);
+    }
+
+    &__children {
+        padding-left: 2rem;
+        border-left: 6px solid $color-grey;
     }
 }
