Fix hidden votes

--- a/resources/assets/sass/pages/_request.scss
+++ b/resources/assets/sass/pages/_request.scss
@@ -37,18 +37,20 @@
         flex: 4;
     }
 
-    h1,
-    #vote,
-    #votes,
-    #voting,
-    #voting1,
-    #voting2,
-    #voting3,
-    #voting4,
-    #voting5,
-    #proposed_voting_choices {
-        &, & + div {
-            display: none;
+    &__contents {
+        h1,
+        #vote,
+        #votes,
+        #voting,
+        #voting1,
+        #voting2,
+        #voting3,
+        #voting4,
+        #voting5,
+        #proposed_voting_choices {
+            &, & + div {
+                display: none;
+            }
         }
     }
 }
