Tweak request page

--- a/resources/assets/sass/pages/_request.scss
+++ b/resources/assets/sass/pages/_request.scss
@@ -4,6 +4,11 @@
     align-items: stretch;
     padding: 0 2rem;
 
+    &__summary {
+        border-bottom: 2px solid lighten(black, 90);
+        padding-bottom: 2rem;
+    }
+
     &__navigation {
         background: lighten($color-grey, 3);
         flex: 1;
@@ -33,7 +38,7 @@
         }
     }
 
-    &__summary {
+    &__text {
         flex: 4;
     }
 
