Close #9 - List what were the actual choices of an RFC

--- a/resources/assets/sass/components/_tables.scss
+++ b/resources/assets/sass/components/_tables.scss
@@ -60,5 +60,9 @@
         &:hover > td.success {
             background-color: lighten($color-green, 2);
         }
+
+        > td.text-right {
+            max-width: 50px;
+        }
     }
 }
