Fix boundaries not being properly removed at the end of a container

--- a/resources/views/_partials/comment.twig
+++ b/resources/views/_partials/comment.twig
@@ -1,4 +1,4 @@
-<article class="comment">
+<article class="comment" data-id={{ comment.xref }}>
     <header class="comment__header">
         <figure>
             <img src="{{ gravatar.setAvatarSize(50).get(comment.user.email) }}" alt="...">
