--- a/resources/views/_layouts/layout.twig
+++ b/resources/views/_layouts/layout.twig
@@ -29,5 +29,6 @@
     {% include '_layouts/partials/footer.twig' %}
 
     <script src="{{ assets.main.js }}"></script>
+    {% include '_layouts/partials/analytics.twig' %}
 </body>
 </html>
