Close #27 - Add alpha text

--- a/resources/views/_layouts/partials/header.twig
+++ b/resources/views/_layouts/partials/header.twig
@@ -1,6 +1,9 @@
 <header class="layout-header page-header text-center">
     <h1>
         <a href="/">{{ app_name }}</a><br>
-        <small>Tracker of PHP RFCs since 1873</small>
+        <small>
+            Tracker of PHP RFCs since 1873<br>
+            <strong>This is an alpha. Stuff will break everywhere.</strong>
+        </small>
     </h1>
 </header>
