--- a/resources/assets/sass/pages/_request.scss
+++ b/resources/assets/sass/pages/_request.scss
@@ -42,21 +42,8 @@
         flex: 4;
     }
 
-    &__contents {
-        h1,
-        #vote,
-        #votes,
-        #voting,
-        #voting1,
-        #voting2,
-        #voting3,
-        #voting4,
-        #voting5,
-        #proposed_voting_choices {
-            &, & + div {
-                display: none;
-            }
-        }
+    &__contents h1 {
+        display: none;
     }
 }
 
