--- a/resources/assets/sass/utils/_variables.scss
+++ b/resources/assets/sass/utils/_variables.scss
@@ -2,7 +2,7 @@
 //////////////////////////////////////////////////////////////////////
 
 $color-grey: #ECF0F1;
-$color-red: #e74c3c;
+$color-red: #E74C3C;
 $color-green: #2ECC71;
 
 $color-text: lighten(black, 40);
