--- a/resources/assets/sass/layout/_header.scss
+++ b/resources/assets/sass/layout/_header.scss
@@ -1,17 +1,21 @@
 .layout-header {
-    background: lighten(#2C3E50, 15) url('../img/claw.png') no-repeat -50px;
-    background-size: auto 150%;
+    background: $color-header url('../img/claw.png') no-repeat center;
+    background-size: auto 80%;
     padding: 5rem;
     margin: 0;
 
     h1, h2 {
         margin: 0;
+        font-weight: 300;
+
+        small {
+            font-weight: 300;
+        }
     }
 
     a {
         color: white;
         transition: color 0.3s;
-        font-weight: 300;
 
         &:hover {
             color: $color-green;
