Move alpha warning
Signed-off-by: Maxime Fabre <ehtnam6@gmail.com>

--- a/resources/assets/sass/layout/_navbar.scss
+++ b/resources/assets/sass/layout/_navbar.scss
@@ -3,7 +3,8 @@
     border-radius: 0;
     min-height: 0;
 
-    li > a {
+    .navbar-brand, li > a {
+        height: auto;
         padding: 0.5em;
         text-transform: lowercase;
         transition: color 0.3s;
