--- a/resources/views/_layouts/partials/header.twig
+++ b/resources/views/_layouts/partials/header.twig
@@ -2,8 +2,7 @@
     <h1>
         <a href="/">{{ app_name }}</a><br>
         <small>
-            Tracker of PHP RFCs since 1873<br>
-            <strong>This is an alpha. Stuff will break everywhere.</strong>
+            Tracker of PHP RFCs since 1873
         </small>
     </h1>
 </header>
