--- a/resources/views/_layouts/partials/navbar.twig
+++ b/resources/views/_layouts/partials/navbar.twig
@@ -10,6 +10,9 @@
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
+            <div class="nav navbar-nav">
+                <span class="navbar-brand">This is an αlpha, stuff will break everywhere</span>
+            </div>
             <ul class="nav navbar-nav navbar-right">
                 {% for link in navigation %}
                     <li {% if current_uri starts with link.uri %}class="active"{% endif %}>
