Add $transition variable to SCSS

--- a/resources/assets/sass/layout/_header.scss
+++ b/resources/assets/sass/layout/_header.scss
@@ -15,7 +15,7 @@
 
     a {
         color: white;
-        transition: color 0.3s;
+        transition: color $transition;
 
         &:hover {
             color: $color-green;
