--- a/resources/assets/sass/utils/_variables.scss
+++ b/resources/assets/sass/utils/_variables.scss
@@ -13,3 +13,8 @@ $color-text: lighten(black, 40);
 //////////////////////////////////////////////////////////////////////
 
 $font-sans: Lato, Helvetica, Arial, sans-serif;
+
+// Animations
+//////////////////////////////////////////////////////////////////////
+
+$transition: 0.3s;
