--- a/resources/assets/sass/layout/_navbar.scss
+++ b/resources/assets/sass/layout/_navbar.scss
@@ -7,6 +7,6 @@
         height: auto;
         padding: 0.5em;
         text-transform: lowercase;
-        transition: color 0.3s;
+        transition: color $transition;
     }
 }
