--- a/resources/assets/sass/components/_comments.scss
+++ b/resources/assets/sass/components/_comments.scss
@@ -2,6 +2,7 @@
     padding: 2rem;
     background-color: $color-grey;
     margin-bottom: 2rem;
+    transition: opacity $transition;
 
     &__header {
         display: flex;
@@ -10,6 +11,7 @@
         padding-bottom: 1em;
         border-bottom: 2px solid darken($color-grey, 10);
         margin-bottom: 2rem;
+        transition: margin-bottom $transition;
 
         figure {
             margin-right: 1em;
@@ -25,5 +27,33 @@
     &__children {
         padding-left: 2rem;
         border-left: 6px solid $color-grey;
+    }
+
+    &--folded {
+        opacity: 0.6;
+
+        .comment {
+            &__header {
+                border: none;
+                padding-bottom: 0;
+                margin-bottom: 0;
+                small {
+                    font-size: 0;
+
+                    &:before {
+                        font-size: 2rem;
+                        content: 'This comment is folded, click to expand it';
+                    }
+                }
+            }
+
+            &__body {
+                display: none
+            }
+        }
+
+        & + .comment__children {
+            display: none;
+        }
     }
 }
