--- a/resources/views/requests/partials/comments.twig
+++ b/resources/views/requests/partials/comments.twig
@@ -1,4 +1,4 @@
-<h2 id="comments" class="text-center">Comments</h2>
+<h2 id="comments" class="text-center">Comments ({{ request.comments.count() }})</h2>
 {% for comment in request.rootComments %}
     {% include '_partials/comment.twig' %}
 {% endfor %}
