Fire event when new version of RFC is releases

--- a/resources/views/events/index.twig
+++ b/resources/views/events/index.twig
@@ -1,23 +1,10 @@
 {% extends '_layouts/layout.twig' %}
 {% set title = 'Latest events' %}
-{% set icons = {
-    rfc_created: 'edit',
-    rfc_status: 'history',
-    comment_created: 'commenting',
-    vote_up: 'thumbs-up',
-    vote_down: 'thumbs-down',
-} %}
 
 {% block content %}
     <ul class="list-group timeline">
         {% for event in events %}
-            <li class="list-group-item">
-                <i class="fa fa-{{ icons[event.type] }}"></i>
-                <div>
-                    {% include "events/events/#{event.type}.twig" %}
-                    <time datetime="{{ event.created_at }}">{{ event.created_at.diffForHumans() }}</time>
-                </div>
-            </li>
+            {% include '_partials/event.twig' %}
         {% endfor %}
     </ul>
 
