--- a/resources/views/_partials/tables/requests.twig
+++ b/resources/views/_partials/tables/requests.twig
@@ -20,7 +20,7 @@
         {% for request in requests %}
             <tr>
                 <td>
-                    <a href="/requests/{{ request.id }}">{{ request.name }}</a>
+                    <a href="{{ url('requests.show', request.identifier) }}">{{ request.name }}</a>
                 </td>
                 <td class="text-right">{{ request.votes.count() }}</td>
                 <td class="text-right">{{ request.comments.count() }}</td>
