--- a/resources/views/_partials/user.twig
+++ b/resources/views/_partials/user.twig
@@ -1,7 +1,7 @@
 <figure class="user">
     <img class="img-circle" src="{{ gravatar.get(user.email) }}" alt="">
     <h2>
-        <a href="/users/{{ user.id }}">{{ user.display_name }}</a><br>
+        <a href="{{ url('users.show', user.identifier) }}">{{ user.display_name }}</a><br>
         <small>{{ user.full_name }}</small>
     </h2>
 </figure>
