--- a/resources/views/events/events/comment_created.twig
+++ b/resources/views/events/events/comment_created.twig
@@ -1,2 +1,2 @@
-<a href="/users/{{ event.eventable.user.id }}">{{ event.eventable.user.display_name }}</a>
-commented on <a href="/requests/{{ event.eventable.request.id }}">{{ event.eventable.request.name }}</a>
+<a href="{{ url('users.show', event.eventable.user.identifier) }}">{{ event.eventable.user.display_name }}</a>
+commented on <a href="{{ url('requests.show', event.eventable.request.identifier) }}">{{ event.eventable.request.name }}</a>
