--- a/resources/views/_layouts/partials/navbar.twig
+++ b/resources/views/_layouts/partials/navbar.twig
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
+            <span class="collapsed navbar-brand">This is an αlpha, stuff will break everywhere</span>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -10,9 +11,6 @@
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
-            <div class="nav navbar-nav">
-                <span class="navbar-brand">This is an αlpha, stuff will break everywhere</span>
-            </div>
             <ul class="nav navbar-nav navbar-right">
                 {% for link in navigation %}
                     <li {% if current_uri starts with link.uri %}class="active"{% endif %}>
