--- a/resources/assets/sass/flatly.scss
+++ b/resources/assets/sass/flatly.scss
@@ -14,12 +14,12 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/grid";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/tables";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/forms";
-//@import "~bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/buttons";
 
 // Components
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
 //@import "~bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
-//@import "~bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
 //@import "~bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/navs";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/navbar";
