--- a/resources/assets/sass/components/_timeline.scss
+++ b/resources/assets/sass/components/_timeline.scss
@@ -1,27 +1,66 @@
 .timeline {
     $decorators-color: lighten(black, 70);
-    $page-width: 35%;
+    $page-width: 40%;
 
     display: flex;
     flex-direction: column;
     width: auto;
     align-items: center;
+    overflow: hidden;
+
+    &__filter {
+        width: $page-width;
+        margin: 0 auto 3rem;
+    }
 
     .list-group-item {
-        margin: 1.5rem 0;
-        padding: 0 1rem;
+        margin: 1rem 0;
+        padding: 0;
+        border-radius: 0.25em;
         display: flex;
         align-items: center;
         border: none;
         width: $page-width;
+        border: 1px solid $color-grey;
+        border-bottom-width: 4px;
+
+        &-heading {
+            $heading-padding: 0.5em;
+            font-weight: bold;
+            font-size: 1em;
+            background-color: lighten($color-grey, 5);
+            border-bottom: 1px solid lighten($color-grey, 2);
+            padding: $heading-padding;
+            position: relative;
+            margin: 0;
+
+            time {
+                position: absolute;
+                top: $heading-padding * 1.5;
+                right: $heading-padding * 1.5;
+                font-size: 0.75em;
+                display: block;
+                color: $decorators-color;
+            }
+        }
+
+        > div {
+            flex: 1;
+            border-left: 1px solid $color-grey;
+        }
+
+        &-text {
+            padding: 0.5em;
+        }
 
         &:before {
             content: '';
             background: lighten($decorators-color, 20);
             width: 5px;
-            height: 100px;
+            height: 300px;
             position: absolute;
-            left: 30px;
+            left: 37px;
+            top: 15px;
             z-index: -1;
         }
     }
@@ -34,11 +73,12 @@
         background: #EEE;
         padding: 1.5rem;
         border-radius: 50%;
-        margin-right: 2rem;
+        margin: 0 1.5rem;
+        transition: background-color $transition;
 
         $icons: (
             history: #4AA3DF,
-            commenting: lighten(black, 40),
+            commenting: lighten(black, 60),
             thumbs-up: $color-green,
             thumbs-down: $color-red,
         );
@@ -54,20 +94,10 @@
             &.fa-#{$icon} {
                 background-color: $color;
             }
+
+            @at-root .list-group-item:hover i.fa-#{$icon} {
+                background-color: darken($color, 10);
+            }
         }
-    }
-
-    div {
-        flex: 1;
-    }
-
-    time {
-        display: block;
-        color: $decorators-color;
-    }
-
-    &__filter {
-        width: $page-width;
-        margin: 0 auto 3rem;
     }
 }
