Link directly to comment in event
Signed-off-by: Maxime Fabre <ehtnam6@gmail.com>

--- a/resources/views/_partials/comment.twig
+++ b/resources/views/_partials/comment.twig
@@ -1,11 +1,14 @@
-<article class="comment" data-id={{ comment.xref }}>
+<article class="comment" id="{{ comment.xref }}">
     <header class="comment__header">
         <figure>
             <img src="{{ gravatar.setAvatarSize(50).get(comment.user.email) }}" alt="...">
         </figure>
         <h4>
             <a href="{{ url('users.show', comment.user.identifier) }}">{{ comment.user.display_name }}</a><br>
-            <small>{{ comment.created_at.toDateTimeString() }}</small>
+            <small>
+                <a href="#{{ comment.xref }}">#</a>
+                {{ comment.created_at.toDateTimeString() }}
+            </small>
         </h4>
     </header>
 
