Persist filter in pagination

--- a/resources/views/events/index.twig
+++ b/resources/views/events/index.twig
@@ -25,6 +25,6 @@
     </ul>
 
     <div class="text-center">
-        {{ events.render() | raw }}
+        {{ events.appends({types: filter}).render() | raw }}
     </div>
 {% endblock %}
