--- a/resources/assets/sass/components/_authors.scss
+++ b/resources/assets/sass/components/_authors.scss
@@ -5,6 +5,7 @@
     justify-content: center;
 
     .user {
+        align-self: baseline;
         max-width: 400px;
         flex: 1;
         margin-right: 1rem;
