--- a/resources/assets/sass/components/_authors.scss
+++ b/resources/assets/sass/components/_authors.scss
@@ -9,5 +9,9 @@
         max-width: 400px;
         flex: 1;
         margin-right: 1rem;
+
+        img {
+            max-width: 100%;
+        }
     }
 }
