Scroll to comments on comments pagination

--- a/resources/views/requests/partials/comments.twig
+++ b/resources/views/requests/partials/comments.twig
@@ -4,5 +4,5 @@
 {% endfor %}
 
 <div class="text-center">
-    {{ comments.render()|raw }}
+    {{ comments.fragment('comments').render()|raw }}
 </div>
