--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -49,32 +49,6 @@
     {% endif %}
 
     {% if user.votes.count() %}
-        <div class="table-responsive">
-            <table class="table table-condensed table-hover table-striped">
-                <thead>
-                <tr>
-                    <th class="text-center" colspan="5">Voted RFCs</th>
-                </tr>
-                <tr>
-                    <th>RFC</th>
-                    <th>Question</th>
-                    <th class="text-right">Voted</th>
-                    <th class="text-right">Approval %</th>
-                    <th class="text-right">Correct?</th>
-                </tr>
-                </thead>
-                {% for vote in user.votes %}
-                    <tr>
-                        <td>
-                            <a href="{{ url('requests.show', vote.question.request.identifier) }}">{{ vote.question.request.name }}</a>
-                        </td>
-                        <td>{{ vote.question.name }}</td>
-                        <td class="text-right">{{ choice(vote.question, vote) }}</td>
-                        <td class="text-right">{{ percentage(vote.question.approval) }}</td>
-                        <td class="text-right">{{ vote.question.majority_choice == vote.choice ? 'Yes' : 'No' }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
-        </div>
+        {% include 'users/partials/votes.twig' %}
     {% endif %}
 {% endblock %}
