Close #29 - Add graph of voting tendencies on users.show

--- a/resources/views/_layouts/layout.twig
+++ b/resources/views/_layouts/layout.twig
@@ -31,6 +31,7 @@
 
     {% include '_layouts/partials/footer.twig' %}
 
+    {% block js %}{% endblock %}
     <script src="{{ assets.main.js }}"></script>
     {% include '_layouts/partials/analytics.twig' %}
     {% if debugbar %}
