--- a/resources/assets/sass/layout/_content.scss
+++ b/resources/assets/sass/layout/_content.scss
@@ -1,3 +1,21 @@
 .layout-pagehead {
     margin: 4rem 0;
 }
+
+figure.graph {
+    position: relative;
+    background: lighten($color-grey, 5);
+    padding: 1rem;
+    margin-bottom: 2rem;
+
+    canvas {
+        max-width: 100%;
+    }
+
+    figcaption {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        font-size: 1.5em;
+    }
+}
