--- a/resources/views/requests/show.twig
+++ b/resources/views/requests/show.twig
@@ -30,8 +30,7 @@
 
     <section class="request">
         <nav class="request__navigation">
-            <ul class="list-unstyled">
-            </ul>
+            <ul class="list-unstyled"></ul>
         </nav>
 
         <section class="request__text">
